[package]
name = "pdb"
version = "0.8.0"
description = "A parser for Microsoft PDB (Program Database) debugging information"
repository = "https://github.com/willglynn/pdb"
authors = ["Jan Michael Auer <mail@jauer.org>", "Will Glynn <will@willglynn.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"
exclude = [
    "fixtures/*",
    "scripts/*",
]

[dependencies]
chrono = "0.4.24"
fallible-iterator = "0.2.0"
scroll = "0.11.0"
serde = {version = "1.0.156", features = ["derive"]} 
serde_json = "1.0.94"
uuid = "1.0.0"

[dev-dependencies]
# for examples/
getopts = "0.2.21"

[package.metadata.release]
pre-release-commit-message = "Release {{version}}"
tag-name = "{{version}}"
tag-message = "Release {{version}}"
dev-version = false
